--- a/myweb.html
+++ b/myweb.html
@@ -20,8 +20,8 @@
         <ol>
             <li>First item</li>
             <img src="C:\Users\qasema\Pictures/cup.jpg" width="220  style="float: right;">
-            <li>Second item</li>
-            <li>Third item</li>
+            <li>Ala Second item</li>
+            <li>Ala Third item</li>
         </ol>
             <p style="font-family: sans-serif">This is a sans-serif font.
             It is commonly used in screens because it is hard
